feat: M9-M11 — perf/memory hardening, release pipeline, OS file association
M9: matcher cache LRU, index bytes/line budget test, search cache cycle/
dense-result tests, soak RSS gate (32 MiB budget), docs/perf.md.
M10: Dmg/Pkg/Msi/Exe/Deb/Rpm packaging (Rpm new), best-effort macOS
signing/notarization + Windows signtool, release.yml on v* tag /
release:published / dispatch, SHA256SUMS upload, nightly.yml folded in,
docs/release.md.
M11: positional file args (one tab each), Open-with-Loggi verb on all OSes
(macOS jpackage fileAssociation, Windows HKCU reg.exe, Linux per-user
.desktop), localized verb name, os/FileAssociation with JVM tests.
Docs: README/README-cn/AGENTS.md updated in sync.